 cnp-block-elasticsearch-plain-text-password-exposure-cve-2018-3826-heidywr.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cnp-block-elasticsearch-plain-text-password-exposure-cve-2018-3826"-yu81d3o
  namespace: default
spec:
  description: "Policy to deny POST request to endpoint /_snapshot from internet"
  endpointSelector:
    matchLabels:
      controller-revision-hash: elasticsearch-master-78777c797c
      release: elasticsearch
      statefulset.kubernetes.io/pod-name: elasticsearch-master-0
      app: elasticsearch-master
      chart: elasticsearch
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: kibana                 #change app: kibana to match your kibana pod label
    toPorts:
    - ports:
      - port: "9200"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/_snapshot"
